Update RunningClass.java